# whirlwind

./: .gitignore  Cargo.toml  LICENSE  README.md  bun.lockb  commands.md  package.json  vite.config.ts
.discontinued/: README.md  region.wrl
.discontinued/bytecode/: Cargo.toml  README.md
.discontinued/example/: main.wrl  test.js  test.ts
Documentation/Core/: Traits.md
Documentation/Design/: Board.md  TypeSystem.md  file.w3c-ebnf  incremental_parsing.md
Examples/WebServer/: .gitignore
Extensions/vscode-whirl/: file.w3c-ebnf  jsconfig.json  package-lock.json  package.json
Site/: index.html
Site/Source/: Main.wrl
Source/errors/: Cargo.toml
Source/language_server/: Cargo.toml
Source/npm/: README.md  package.json
Source/typechecker/: Cargo.toml
Source/whirl_analyzer/: Cargo.toml
Source/whirl_analyzer/src/: lib.rs  module.rs  primitive.rs
Source/whirl_analyzer/src/resolver/: context.rs  expr.rs  mod.rs  module.rs  modulegraph.rs  program.rs
Source/whirl_analyzer/src/resolver/binding/: mod.rs  programerror.rs  statement.rs  typed_statement.rs
Source/whirl_analyzer/src/resolver/symbols/: mod.rs  typed_expr.rs  typed_module.rs  typed_statement.rs
Source/whirl_analyzer/src/typechecker/: inference.rs  mod.rs  primitive.rs  test.rs  type_utils.rs
Source/whirl_ast/: Cargo.toml
Source/whirl_core/: Cargo.toml
Source/whirl_errors/: Cargo.toml
Source/whirl_language_server/: Cargo.toml
Source/whirl_language_server/src/: did_change.rs  document_manager.rs  hover.rs  hover_info.rs  main.rs
Source/whirl_language_server/src/diagnostic/: mod.rs
Source/whirl_language_server/src/hover/: hover.example.c  hover.example.py  hover.example.ts  mod.rs
Source/whirl_lexer/: Cargo.toml
Source/whirl_macros/: Cargo.toml
Source/whirl_npm/: package.json
Source/whirl_parser/: Cargo.toml
Source/whirl_parser/src/: errors.rs  lib.rs  module.rs  parser.rs  scope.rs  test.rs
Source/whirl_printer/: Cargo.toml
Source/whirl_repl/: Cargo.toml
Source/whirl_semantic/: Cargo.toml
Source/whirl_semantic/src/: lib.rs  module.rs  primitive.rs
Source/whirl_semantic/src/typechecker/: errors.rs  mod.rs  test.rs  type_utils.rs  typecheck.ts
Source/whirl_server/: Cargo.toml
Source/whirl_server/src/: did_change.rs  document_manager.rs  error.rs  main.rs
Source/whirl_server/src/diagnostic/: mod.rs
Source/whirl_server/src/hover/: mod.rs
Source/whirl_typechecker/: Cargo.toml
Source/whirl_utils/: Cargo.toml
Tests/: Program.wrl
Tests/binding/: enums.wrl  function_expr.wrl  models.wrl  this_and_call.wrl  this_type.wrl  types.wrl  variables.wrl
approved/: external-functions.md
cli/: Cargo.toml  README.md
cli/src/: diagnostics.rs  help.rs  main.rs  options.rs
compiler/analyzer/: Cargo.toml
compiler/analyzer/src/: globals.rs  lib.rs  literalmap.rs  modulemap.rs  programdiagnostic.rs  surfacearea.rs  symbollib.rs  symbols.rs
compiler/analyzer/src/binding/: mod.rs  typed_expr.rs  typed_statement.rs
compiler/analyzer/src/representations/: module.rs
compiler/analyzer/src/standpoint/: mod.rs  tests.rs
compiler/analyzer/src/typechecker/: environment.rs  intermediate.rs  tests.rs  utils.rs
compiler/analyzer/src/typechecker/checker/expressions/: binary.rs
compiler/analyzer/src/typechecker/checker/statements/: forloop.rs  interface_declaration.rs  mod.rs  model_declaration.rs
compiler/analyzer/src/typing/: environment.rs  evaluated.rs  intermediate.rs  mod.rs  tests.rs  unify.rs  utils.rs
compiler/analyzer/src/typing/checker/: mod.rs  statements.rs
compiler/analyzer/src/typing/checker/expressions/: access.rs  assignment.rs  binary.rs  calls.rs  mod.rs
compiler/analyzer/src/typing/checker/statements/: interface_declaration.rs  mod.rs  model_declaration.rs
compiler/analyzer/src/visitor/: mod.rs
compiler/bytecode/: Cargo.toml
compiler/bytecode/src/: constant.rs  from_text.rs  lib.rs  reader.rs  registers.rs
compiler/bytecode/src/disassembler/: mod.rs
compiler/bytecode/src/generator/: callable.rs  expression.rs  memory.rs  mod.rs
compiler/bytecode/src/instruction/: mod.rs  opcode.rs
compiler/bytecode/src/instruction/opcode/: mod.rs  opcode.txt  opcode_impl.rs
compiler/bytecode/src/tests/: mod.rs
compiler/cli/: Cargo.toml
compiler/cli/src/: help.rs  main.rs  options.rs
compiler/lexer/: Cargo.toml
compiler/wasm/: Cargo.toml  test.js  test.wasm  test.wat
docs/: BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  folders.md  roadmap.md
docs/algorithms/: module-resolution.md  scopes.md  symbol-binding.md
docs/overview/: compiler-phases.md  herald.md  language-server.md  the-runtime.md
docs/quick-intro/: README.md
docs/roadmap/: README.md
docs/syntax/: grammar.w3c-ebnf
docs/tutorials/: README.md
documentation/: CLI Arguments.md
examples/HelloWorld/: herald.yaml  pop.wrl
examples/TypeTest/: herald.json
examples/WebServer/: .gitignore  b.ts  herald.yaml
proposals/: grammar.w3c-ebnf
runtime/: Cargo.toml
runtime/benchmarks/: test.js
runtime/src/: tests.rs  vm.rs
scripts/: build-server.cmd  convert.js
server/: Cargo.toml
server/src/: document_manager.rs  folding_range.rs  index.js  main.rs
server/src/completion/: mod.rs
server/src/hover/: mod.rs
site/: README.md  bun.lockb  index.html  nuxt.config.ts  package.json  vite.config.ts
source/compiler/parser/: Cargo.toml
source/compiler/parser/src/: parse.rs  test.rs
source/prettyprint/: Cargo.toml
source/prettyprint/src/: format.rs  highlight.rs  lib.rs  writer.rs
source/runtime/: Cargo.toml
source/runtime/benchmarks/: test.js  test.py
source/runtime/src/: lib.rs  predefined.rs  sequence.rs  stack.rs  tests.rs  value.rs  vm.rs
source/server/: Cargo.toml
source/server/src/: document_manager.rs  error.rs  folding_range.rs  main.rs  message_store.rs  requests.rs
source/server/src/completion/: mod.rs
source/server/src/diagnostic/: mod.rs
source/server/src/hover/: mod.rs
source/vm/: Cargo.toml
source/vm/src/: lib.rs  predefined.rs  sequence.rs  stack.rs  tests.rs  vm.rs
source/vm/src/sequence/: mod.rs
(+755 files in other folders)
