[workspace]
resolver = "2"
members = [
    "compiler/ast", 
    "compiler/errors", 
    "compiler/lexer", 
    "compiler/parser",
    "compiler/pretty",
    "compiler/analyzer",
    "compiler/utils",
    "compiler/macros",
    "compiler/middleend",
    "cli",
    "server",
    "repl",
    "interpreter"
]
