[workspace]
resolver = "2"
members = [
    "source/compiler/ast", 
    "source/compiler/errors", 
    "source/compiler/lexer", 
    "source/compiler/parser",
    "source/compiler/pretty",
    "source/compiler/analyzer",
    "source/compiler/utils",
    "source/compiler/macros",
    "source/compiler/middleend",
    "source/cli",
    "source/server",
    "source/repl",
    "source/interpreter"
]
