[package]
name = "cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = {version = "*", path = "../compiler/ast"}
analyzer = {version = "*", path = "../compiler/analyzer"}
utils = {version = "*", path = "../compiler/utils"}
errors = {version = "*", path = "../compiler/errors"}
pretty = {version = "*", path = "../compiler/prettyprint"}