[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer = {version = "*", path = "../compiler/analyzer"}
bytecode = {version = "*", path = "../compiler/bytecode"}
ast = {version = "*", path = "../compiler/ast"}
utils = {version = "*", path = "../compiler/utils"}
errors = {version = "*", path = "../compiler/errors"}
