[package]
name = "whirl_language_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = {version = "0.20.0"}
whirl_ast = {version = "*", path = "../whirl_ast"}
whirl_semantic = {version = "*", path = "../whirl_semantic"}
whirl_printer = {version = "*", path = "../whirl_printer"}
whirl_errors = {version="*", path="../whirl_errors"}