[package]
name = "whirl_semantic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whirl_parser = {version = "*", path = "../whirl_parser"}
whirl_ast = {version = "*", path = "../whirl_ast"}
whirl_lexer = {version = "*", path = "../whirl_lexer"}