[package]
name = "whirl_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = {version = "0.20.0"}
whirl_ast = {version = "*", path = "../whirl_ast"}
whirl_analyzer = {version = "*", path = "../whirl_analyzer"}
whirl_printer = {version = "*", path = "../whirl_printer"}
whirl_errors = {version="*", path="../whirl_errors"}
whirl_utils = {version="*" , path="../whirl_utils"}
url = "2.4.1"
