[package]
name = "bytecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer = {version = "*", path = "../analyzer"}
ast = {version = "*", path = "../ast"}
errors = {version = "*", path = "../errors"}
indexmap = "2.1.0"
