[package]
name = "pretty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = {version ="*", path="../ast"}
errors = {version="*", path="../errors"}
utils = {version="*", path="../utils"}
analyzer = {version="*", path="../analyzer"}
lexer = {version="*", path="../lexer"}