[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer = {version = "*", path = "../analyzer"}
bytecode = {version = "*", path = "../bytecode"}
ast = {version = "*", path = "../ast"}
utils = {version = "*", path = "../utils"}
