[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = {version = "0.20.0"}
ast = {version = "*", path = "../ast"}
analyzer = {version = "*", path = "../analyzer"}
pretty = {version = "*", path = "../prettyprint"}
errors = {version="*", path="../errors"}
utils = {version="*" , path="../utils"}
url = "2.4.1"
serde_json = "1.0.108"
