[package]
name = "parser"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = {version = "*", path = "../lexer"}
ast = {version = "*", path = "../ast"}
utils = {version="*", path="../utils"}
errors = {version="*", path="../errors"}